syntax = "proto3";
package pb;
option go_package = "internal/pb";

message blankRequest{}

message CreateCategoryRequest {
    string name = 1;
    string description = 2;
}

message GetCategoryRequest {
    string id = 1;
}

message CategoryListResponse {
    repeated CategoryResponse categories = 1;
}

message CategoryResponse {
    string id = 1;
    string name = 2;
    string description = 3;
}

service CategoryService {
    rpc CreateCategory(CreateCategoryRequest) returns (CategoryResponse) {}
    rpc CreateCategoryStream(stream CreateCategoryRequest) returns (CategoryListResponse) {}
    rpc CreateCategoryStreamBidirectional(stream CreateCategoryRequest) returns (stream CategoryResponse) {}
    rpc ListCategories(blankRequest) returns (CategoryListResponse) {}
    rpc GetCategory(GetCategoryRequest) returns (CategoryResponse) {}
}

message CreateCourseRequest {
    string name = 1;
    string description = 2;
    string categoryID = 3;
}

message GetCourseRequest {
    string id = 1;
}

message CourseResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    string categoryID = 4;
}

message CourseListResponse {
    repeated CourseResponse courses = 1;
}

service CourseService {
    rpc CreateCourse(CreateCourseRequest) returns (CourseResponse) {}
    rpc CreateCourseStream(stream CreateCourseRequest) returns (CourseListResponse) {}
    rpc CreateCourseStreamBidirectional(stream CreateCourseRequest) returns (stream CourseResponse) {}
    rpc ListCourses(blankRequest) returns (CourseListResponse) {}
    rpc GetCourse(GetCourseRequest) returns (CourseResponse) {}
}